@@ -2,6 +2,9 @@ Giraph Change Log
 
 Release 0.70.0 - unreleased
 
+  GIRAPH-80: Don't expose the list holding the messages in
+  BasicVertex. (ssc via aching)
+
   GIRAPH-103: Added properties for commonly used package version to
   pom.xml. (aching)
 
